# ocoup

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.deploy  README.md  fly.toml  tests.md
.github/: README.md
.github/workflows/: build.yml
client/: package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  tailwind.config.ts  tournament-cli.js
client/app/: config.ts  globals.css  layout.tsx  page.tsx  types.ts
client/app/components/: BotHelp.tsx  Navigation.tsx  ResponseForm.tsx  ServerMessage.tsx
client/app/tournament/: page.tsx
client/app/tournament/components/: TournamentProgress.tsx  TournamentResults.tsx  TournamentSetup.tsx
client/app/tournament/utils/: gameMessageHandler.ts
client/src/app/: globals.css
lib/: dune  ocoup.ml  ocoup.mli
server/: dune-project  ocoup.opam
server/lib/: cli_player_io.ml  cli_player_io.mli  game.ml  game.mli  gemini_player_io.ml  gemini_player_io.mli  llm_player_io.ml  llm_player_io.mli  ocoup.ml  ocoup.mli  player_ios.ml  player_ios.mli  protocol.ml  protocol.mli  rules.ml  rules.mli  tournament.ml  tournament.mli  types.ml  types.mli  websocket_player_io.ml  websocket_player_io.mli
server/test/: dune  test_helpers.ml  test_helpers.mli  test_ocoup.ml  test_tournament.ml
