(lang dune 3.17)

(name ocoup)

(generate_opam_files true)

(formatting (enabled_for ocaml))

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocoup)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
   ocaml
   dune
   async
   async_ssl
   core
   cohttp-async
   yojson
   cohttp_async_websocket
   ppx_jane
   ppx_yojson_conv)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
